@@ -1,4 +1,8 @@
-﻿shmuel 21.04.2015 16:19:03 +0200 - build 509
+﻿zg 22.04.2015 21:33:27 +0200 - build 510
+
+1. Far 3.0 API 4353.
+
+shmuel 21.04.2015 16:19:03 +0200 - build 509
 
 1. LuaFAR (generic plugin):
    Параметр ENV_PREFIX больше не имеет значения по умолчанию: ни в C-файле, ни в мейк-файле.
